--- a/src/main/resources/gui/SelectOwner.fxml
+++ b/src/main/resources/gui/SelectOwner.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="602.0" style="-fx-background-color: #191970;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SelectOwnerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="602.0" style="-fx-background-color: #191970;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SelectOwnerController">
     <children>
         <AnchorPane prefHeight="94.0" prefWidth="602.0" style="-fx-background-color: #FFD700;">
             <children>
@@ -30,18 +30,18 @@
                 </Button>
             </children>
         </AnchorPane>
-        <Button fx:id="selectOwnerButton" layoutX="221.0" layoutY="232.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="160.0" style="-fx-background-color: #87CEEB;" text="Обрати власника">
+        <Button fx:id="selectOwnerButton" layoutX="22.0" layoutY="295.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="160.0" style="-fx-background-color: #87CEEB;" text="Обрати власника">
             <font>
                 <Font name="Consolas" size="16.0" />
             </font>
         </Button>
-        <ChoiceBox fx:id="typeChoiceBox" layoutX="48.0" layoutY="168.0" prefWidth="150.0" />
-        <Label layoutX="35.0" layoutY="143.0" text="Оберіть тип власника" textFill="WHITE">
+        <ChoiceBox fx:id="typeChoiceBox" layoutX="27.0" layoutY="139.0" prefWidth="150.0" />
+        <Label layoutX="14.0" layoutY="108.0" text="Оберіть тип власника" textFill="WHITE">
             <font>
                 <Font name="Consolas" size="16.0" />
             </font>
         </Label>
-        <Label layoutX="198.0" layoutY="117.0" text="Вкажіть ім'я та прізвище, якщо власник особа" textFill="WHITE">
+        <Label layoutX="209.0" layoutY="108.0" text="Вкажіть ім'я та прізвище, якщо власник особа" textFill="WHITE">
             <font>
                 <Font name="Consolas" size="16.0" />
             </font>
@@ -52,11 +52,11 @@
                 <Font name="System Bold" size="14.0" />
             </font></TextArea>
         <TextField fx:id="lastNameField" layoutX="435.0" layoutY="139.0" />
-        <Label layoutX="245.0" layoutY="171.0" text="Вкажіть країну, якщо власник держава" textFill="WHITE">
+        <Label layoutX="142.0" layoutY="182.0" text="Вкажіть країну, якщо власник держава" textFill="WHITE">
             <font>
                 <Font name="Consolas" size="16.0" />
             </font>
         </Label>
-        <TextField fx:id="countryField" layoutX="328.0" layoutY="187.0" />
+        <TextField fx:id="countryField" layoutX="233.0" layoutY="216.0" />
     </children>
 </AnchorPane>
